package com.engine.events;

public enum EventType {
    KEY_PRESSED,
    KEY_RELEASED,
    MOUSE_MOVED,
    MOUSE_PRESSED,
    MOUSE_RELEASED,
    GAMEPAD_PRESSED,
    GAMEPAD_RELEASED,
    GAMEPAD_MOVED
}
