package com.engine.events;

public enum GamepadAxis {
    AXIS_LEFT,
    AXIS_RIGHT
}
